✨ feat: add CLI tools for brain API and task runner
- Add brain CLI for server management (start/stop/restart/status/logs)
- Add do-work CLI for task runner operations (start/list/tree/ready)
- Register both as bin executables in package.json
- Simplify justfile by removing commands now in CLI tools

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "REST API service for AI agent memory and knowledge management",
   "type": "module",
   "main": "src/index.ts",
+  "bin": {
+    "brain": "./src/cli/brain.ts",
+    "do-work": "./src/cli/do-work.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/huynle/brain.git"
