--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "format": "bunx @biomejs/biome format --write src/"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^1.2.1",
     "@types/react": "^19.2.10",
     "hono": "^4.6.0",
     "ink": "^6.6.0",
     "ink-select-input": "^6.2.0",
     "ink-spinner": "^5.0.0",
-    "react": "^19.2.4"
+    "react": "^19.2.4",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/bun": "latest",
