✨ feat: add plugin system for AI coding assistant integrations
Add plugin architecture supporting multiple AI coding assistants:
- OpenCode: Full MCP tool integration (save, recall, search, etc.)
- Claude Code: MCP server implementation with brain tools
- Cursor: Extension stub (coming soon)
- Antigravity: Extension stub (coming soon)

New CLI commands: brain install/uninstall <target>, plugin-status
Supports --force, --dry-run, and --api-url options

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brain-api",
+  "name": "brain",
   "version": "0.1.0",
   "description": "REST API service for AI agent memory and knowledge management",
   "type": "module",
@@ -21,7 +21,7 @@
     "bun",
     "hono"
   ],
-  "author": "Brain API Contributors",
+  "author": "Brain Contributors",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/huynle/brain/issues"
