--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "jsxImportSource": "react"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/plugins/targets/**/*"]
 }
