--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "brain",
+  "name": "@brain/api",
   "version": "0.1.0",
   "description": "REST API service for AI agent memory and knowledge management",
   "type": "module",
   "main": "src/index.ts",
   "bin": {
     "brain": "./src/cli/brain.ts",
+    "brain-server": "./src/cli/server.ts",
+    "brain-runner": "./src/runner/index.ts",
     "do-work": "./src/cli/do-work.ts"
+  },
+  "files": [
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
+  "engines": {
+    "bun": ">=1.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -19,7 +32,9 @@
     "zettelkasten",
     "rest-api",
     "bun",
-    "hono"
+    "hono",
+    "ai-agents",
+    "mcp"
   ],
   "author": "Brain Contributors",
   "license": "MIT",
@@ -34,7 +49,8 @@
     "test": "bun test",
     "typecheck": "tsc --noEmit",
     "lint": "bunx @biomejs/biome check src/",
-    "format": "bunx @biomejs/biome format --write src/"
+    "format": "bunx @biomejs/biome format --write src/",
+    "prepublishOnly": "bun run typecheck"
   },
   "dependencies": {
     "@hono/zod-openapi": "^1.2.1",
@@ -49,6 +65,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "ink-testing-library": "^4.0.0",
+    "react-devtools-core": "^7.0.1",
     "typescript": "^5.0.0"
   }
 }
